WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263534
REGRESSION(
269643@main
) AX: Summary elements are not expandable by macOS VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=263534
Summary
REGRESSION(269643@main) AX: Summary elements are not expandable by macOS Voic...
Tyler Wilcock
Reported
2023-10-23 10:27:53 PDT
Regression from:
https://bugs.webkit.org/show_bug.cgi?id=263499
Claiming "supports press action" for summary elements is not correct, and actually regresses this functionality. We should un-do that part of the change from
https://bugs.webkit.org/show_bug.cgi?id=263499
.
Attachments
Patch
(4.36 KB, patch)
2023-10-23 10:33 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-23 10:28:03 PDT
<
rdar://problem/117359988
>
Tyler Wilcock
Comment 2
2023-10-23 10:33:20 PDT
Created
attachment 468302
[details]
Patch
EWS
Comment 3
2023-10-23 18:23:15 PDT
Committed
269688@main
(21002ed8c1d1): <
https://commits.webkit.org/269688@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468302
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug