REGRESSION(269643@main) AX: Summary elements are not expandable by macOS VoiceOver https://bugs.webkit.org/show_bug.cgi?id=263534 rdar://problem/117359988

Reviewed by Andres Gonzalez.

Regression from:

https://bugs.webkit.org/show_bug.cgi?id=263499

Claiming "supports press action" for summary elements is not correct, and actually regresses this functionality.
This patch undoes that part of https://bugs.webkit.org/show_bug.cgi?id=263499, and adds testcases and documentation
to prevent this mistake in the future.

* LayoutTests/accessibility/mac/search-predicate-summary-expected.txt:
* LayoutTests/accessibility/mac/search-predicate-summary.html:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsPressAction const):

Canonical link: https://commits.webkit.org/269688@main